==> RutronikSystemSolutions/RutDevKit-PSoC62_ME310G1-WW/modem.c <==
#include "cy_pdl.h"
#include "cyhal.h"
#include "cybsp.h"
#include "cy_retarget_io.h"
#include "FreeRTOS.h"
#include "task.h"
#include "queue.h"
#include "modem.h"
#include "StringCommandParser.h"
#include "string.h"
#include "stdlib.h"
#include "stdio.h"
#include "math.h"
#include "time.h"

static inline _Bool ModemOn(uint16_t *pwr_level)
{
  /*Turn on power for LTE Modem*/
  if(*pwr_level < PWRONLVL)
  {
	/*Power Supply ON*/
	cyhal_gpio_write(ARDU_IO3, 0);
	vTaskDelay(pdMS_TO_TICKS(100));

	/*Modem ON*/
    cyhal_gpio_write(ARDU_IO8, 1);
    vTaskDelay(pdMS_TO_TICKS(5000));
    cyhal_gpio_write(ARDU_IO8, 0);
    if(*pwr_level >= PWRONLVL)
    {
      vTaskDelay(pdMS_TO_TICKS(1000));
      printf("MODEM POWER ON\n\r\n\r");
      return true;
    }
    else
    {
      return false;
    }
  }
  else
  {
	  printf("MODEM POWER ON\n\r\n\r");
	  return true;
  }
}

static inline _Bool ModemOff(uint16_t *pwr_level)
{
  /*Turn off power for LTE Modem*/
  if(*pwr_level >= PWRONLVL)
  {
	cyhal_gpio_write(ARDU_IO8, 1);
	vTaskDelay(pdMS_TO_TICKS(3000));
    cyhal_gpio_write(ARDU_IO8, 0);
    vTaskDelay(pdMS_TO_TICKS(3000));

	/*Power Supply OFF*/
    cyhal_gpio_write(ARDU_IO3, 1);
    vTaskDelay(pdMS_TO_TICKS(5000));

    if(*pwr_level < PWRONLVL)
    {
    	printf("MODEM POWER OFF\n\r\n\r");
    	return true;
    }
    else
    {
      return false;
    }
  }
  else
  {
	  printf("MODEM POWER OFF\n\r\n\r");
	  return true;
  }
}

uint32_t uart_send_buff(uint8_t *data_out, uint32_t size)
{
	return cyhal_uart_write_async(&ardu_uart, (void*) data_out, (size_t) size);
}

uint32_t uart_read_byte(uint8_t *pData)
{
	return cyhal_uart_read_async( &ardu_uart, (void *) pData, 1);
}

static _Bool TelitPortalAuthenticate(void)
{
    char *result = NULL;
    int i = 0;
    char local_buff[1024];

    memset(post_buff, 0, sizeof(post_buff));
    memset(local_buff, 0, sizeof(local_buff));
    memset(post_length, 0, sizeof(post_length));
    memset(telit_sessionId, 0, sizeof(telit_sessionId));

    /* Form data for lenght calculation*/
    sprintf(local_buff, fcmd_dW_auth, telit_appToken, telit_appID, modem_data.imei);

    /* Get data length */
    sprintf(post_length, "%d\r\n\r\n", strlen(local_buff));

    /*Generate full HTTP post*/
    sprintf(post_buff, (char *)fcmd_HTTPPOST);
    strcat(post_buff,post_length);
    strcat(post_buff,local_buff);
    strcat(post_buff,"\r\n");

    /*Reset rx buffer for data reception*/
    SCP_InitRx();

    /* Send HTTP POST data */
    SCP_SendData(post_buff, strlen(post_buff));
    printf("\n\rAUTHENTICATE:\n\r%s\n\r", post_buff);

    /* Wait for full answer */
    result = SCP_WaitForAnswer("}

static _Bool TelitPortalPostData(void)
{
  char *result = NULL;
  char local_buff[1024];
  static float temperature = 0, humidity = 0, pressure = 0;
  static int mag_xy = 0;
  int signal_level,batt_voltage;

  /*Dummy values*/
  temperature++;
  humidity++;
  pressure++;
  mag_xy++;

  /*Battery voltage*/
  batt_voltage = (int)(aADCdata[1]*ADC_VOLTAGE_COEFF);

  memset(post_buff, 0, sizeof(post_buff));
  memset(local_buff, 0, sizeof(local_buff));
  memset(post_length, 0, sizeof(post_length));

  /*Copy variables that might to change during data post*/
  signal_level = modem_data.signal;

  /*Reset rx buffer for data reception*/
  SCP_InitRx();

  /*If we have no GPS data, we have to exclude them from post*/
  if(
     strlen(modem_data.gps_latitude) == 0
       || strlen(modem_data.gps_longitude) == 0
         || strlen(modem_data.gps_altitude) == 0
           || strlen(modem_data.gps_course) == 0
             || strlen(modem_data.gps_speed) == 0
               || strlen(modem_data.gps_precision) == 0
                 )
  {

	/* Generate JSON post */
	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_auth, telit_sessionId);
	strcat(local_buff,post_buff);

	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_p1, modem_data.imei, temperature);
	strcat(local_buff,post_buff);

	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_p2, modem_data.imei, pressure);
	strcat(local_buff,post_buff);

	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_p3, modem_data.imei, humidity);
	strcat(local_buff,post_buff);

	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_p4, modem_data.imei, mag_xy);
	strcat(local_buff,post_buff);

	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_p5, modem_data.imei, batt_voltage);
	strcat(local_buff,post_buff);

	memset(post_buff, 0, sizeof(post_buff));
	sprintf((char *)post_buff, fcmd_dw_post_p6end, modem_data.imei, signal_level);
	strcat(local_buff,post_buff);

    /*Generate HTTP post*/
	memset(post_buff, 0, sizeof(post_buff));
    sprintf(post_buff, (char *)fcmd_HTTPPOST);
    sprintf(post_length, "%d\r\n\r\n", strlen(local_buff));
    strcat(post_buff,post_length);
    strcat(post_buff,local_buff);
    strcat(post_buff,"\r\n");

    /* Send HTTP POST data */
    SCP_SendData((char *)post_buff, strlen(post_buff));
    printf("\n\rUPLOADING:\n\r%s\n\r", post_buff);
    vTaskDelay(pdMS_TO_TICKS(1000));

    result = SCP_WaitForAnswer("}}

upload_error_t TelitCloudUpload(void)
{
  _Bool authenticated = false;
  _Bool result = false;
  char * scp_result = NULL;
  volatile upload_error_t return_error = UPLOAD_OK;

  printf("Telit Cloud Upload Procedure Started.\n\r");

  /*Apply power for IoT LTE module*/
  if(!ModemOn(&aADCdata[0]))
  {
    return_error = MODEM_POWER_ON_FAIL;
    goto error_exit;
  }

  /*Needs longer period to get ready?*/
  vTaskDelay(pdMS_TO_TICKS(5000));

  /*Start AT Commands*/
  scp_result = SCP_SendCommandWaitAnswer("AT\r\n", "OK", 200, 1);

  /*No response to AT, Retry*/
  if(!scp_result)
  {
	vTaskDelay(pdMS_TO_TICKS(5000));
    cyhal_uart_read_async(&ardu_uart, (void *)&RxByte, 1);
    scp_result = NULL;
    scp_result = SCP_SendCommandWaitAnswer("AT\r\n", "OK", 200, 1);
    if(!scp_result)
    {
      return_error = MODEM_CMD_NO_RESPONSE;
      goto error_exit;
    }
  }

  /*Modem is ON*/
  modem_data.mod_pwr_status = true;

  /*Check PIN*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CPIN?\r\n", "+CPIN: READY", 2000, 1);
  vTaskDelay(pdMS_TO_TICKS(100));

  /*Echo commands turn off*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("ATE0\r\n", "OK", 2000, 1);

  /*Select Text Mode SMS*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CMGF=1\r\n", "OK", 2000, 1);

  /*Sets LED Output mode*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT#SLED=4\r\n", "OK", 2000, 1);

  if(scp_result)
  {
    /*Get IMEI*/
    scp_result = NULL;
    scp_result = GetIMEI();
    if(scp_result)
    {
      memset(modem_data.imei, 0x00, 16);
      strcpy(modem_data.imei, scp_result);
      printf("IMEI:%s\n\r",modem_data.imei);
    }

    /*Get module type*/
    scp_result = NULL;
    scp_result = GetID();
    if(scp_result)
    {
      memset(modem_data.device_name, 0x00, 21);
      strcpy(modem_data.device_name, scp_result);
      printf("Device:%s\n\r",modem_data.device_name);
    }

    /*Get firmware version*/
    scp_result = NULL;
    scp_result = GetVersion();
    if(scp_result)
    {
      memset(modem_data.fw_version, 0x00, 16);
      strcpy(modem_data.fw_version, scp_result);
      printf("FW Version:%s\n\r",modem_data.fw_version);
    }
  }

  if(!scp_result)
  {
    return_error = MODEM_CMD_NO_RESPONSE;
    goto error_exit;
  }

  /*Set APN*/
#warning "Correct APN must be set."
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CGDCONT?\r\n", "omnitel", 1000, 1);
  if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CGDCONT=1,\"IP\",\"omnitel\"\r\n", "OK", 2000, 1);
  //if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CGDCONT?\r\n", "lpwa.telia.iot", 1000, 1);
  //if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CGDCONT=1,\"IP\",\"lpwa.telia.iot\"\r\n", "OK", 2000, 1);

  //if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+WS46?\r\n", "+WS46: 28", 1000, 1);
  //if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+WS46=28\r\n", "OK", 1000, 1);

  //if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+WS46?\r\n", "+WS46: 12", 1000, 1);
  //if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+WS46=12\r\n", "OK", 1000, 1);

  /*Network Support Setup*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+WS46?\r\n", "+WS46: 28", 1000, 1);
  if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+WS46=28\r\n", "OK", 1000, 1);
  if (scp_result)
  {
    scp_result = SCP_SendCommandWaitAnswer("AT#WS46=3\r\n", "OK", 1000, 1);
    if(!scp_result)
    {
      return_error = MODEM_NET_SELECT_FAIL;
      goto error_exit;
    }
  }

  if (scp_result)
  {
    /*Check if we are connected to GSM network*/
    if(!WaitForNetwork())
    {
      return_error = MODEM_NO_OPERATOR_PRESENT;
      goto error_exit;
    }
  }
  else
  {
    return_error = MODEM_CMD_NO_RESPONSE;
    goto error_exit;
  }

  /*Store signal quality*/
  modem_data.signal = SignalQuality();

  /*Network status check*/
  modem_data.network_status =  NetworkRegistrationCheck();

  /*registered to home network or registered as roaming is acceptable*/
  if((modem_data.network_status == 1) || (modem_data.network_status == 5))
  {
    /*Store operator*/
    scp_result = NULL;
    scp_result = GetOperator();
    if(scp_result)
    {
      memset(modem_data.provider, 0x00, 17);
      strcpy(modem_data.provider, scp_result);
      printf("Operator: %s\n\r",modem_data.provider);
    }
    else
    {
      return_error = MODEM_NO_OPERATOR_PRESENT;
      goto error_exit;
    }

    /*Check LTE status*/
    modem_data.context = ContextStatusCheck();

    /*Try to connect if not connected*/
    if(!modem_data.context)
    {
      modem_data.context = ContextActivation(modem_data.ip_address);
      if(!modem_data.context)
      {
        ContextDeactivation();
        return_error = MODEM_NO_DATA_SERVICE;
        goto error_exit;
      }
      else
      {
    	  printf("IP Address:%s\n\r",modem_data.ip_address);
      }
    }
  }
  else
  {
    modem_data.context = 0;
    return_error = CLOUD_AUTH_ERROR;
    goto error_exit;
  }

  /*Start uploading*/
  cyhal_gpio_write(LED1, CYBSP_LED_STATE_ON);

  /*Authenticate*/
  result = ModemOpenTcpSocket("api-de.devicewise.com", 80);
  if(result)
  {
	  authenticated = TelitPortalAuthenticate();
  }

  vTaskDelay(pdMS_TO_TICKS(5000));

  /*Post*/
  if(authenticated)
  {
	  result = ModemOpenTcpSocket("api-de.devicewise.com", 80);
      if (result)
      {
        authenticated = TelitPortalPostData();
      }
  }

  /*Check the results*/
  if(!result || !authenticated)
  {
      ContextDeactivation();
      return_error = CLOUD_AUTH_ERROR;
      goto error_exit;
  }

  /*Turn off LED1*/
  cyhal_gpio_write(LED1, CYBSP_LED_STATE_OFF);
  /*Turn off Modem*/
  if(!ModemOff(&aADCdata[0]))
  {
    return_error = MODEM_POWER_OFF_FAIL;
    modem_data.mod_pwr_status = false;
    return return_error;
  }
  modem_data.mod_pwr_status = false;
  return return_error;

error_exit:
  /*Turn off LED1*/
  cyhal_gpio_write(LED1, CYBSP_LED_STATE_OFF);
  /*Turn off Modem*/
  if(!ModemOff(&aADCdata[0]))
  {
    return_error = MODEM_POWER_OFF_FAIL;
    modem_data.mod_pwr_status = false;
    return return_error;
  }
  modem_data.mod_pwr_status = false;
  return return_error;
}
