==> amberchild/MPPT-Solar-Charger/Firmware/MPPT_LED/Src/modem.c <==
#include "modem.h"
#include "main.h"
#include "cmsis_os.h"
#include "StringCommandParser.h"
#include "string.h"
#include "stdlib.h"
#include "stdio.h"
#include "math.h"

static inline _Bool ModemOn(uint16_t *pwr_level)
{
  /*Turn on power for LTE Modem*/
  if(*pwr_level < PWRONLVL)
  {
	HAL_GPIO_WritePin(LDO_OFF_GPIO_Port, LDO_OFF_Pin, GPIO_PIN_RESET);
	osDelay(3000);
    HAL_GPIO_WritePin(ON_OFF_GPIO_Port, ON_OFF_Pin, GPIO_PIN_SET);
    osDelay(3000);
    HAL_GPIO_WritePin(ON_OFF_GPIO_Port, ON_OFF_Pin, GPIO_PIN_RESET);
    if(*pwr_level >= PWRONLVL)
    {
      osDelay(1000);
      return true;
    }
    else
    {
      return false;
    }
  }
  else
  {
    return true;
  }
}

static inline _Bool ModemOff(uint16_t *pwr_level)
{
  /*Turn off power for LTE Modem*/
  if(*pwr_level >= PWRONLVL)
  {
    HAL_GPIO_WritePin(ON_OFF_GPIO_Port, ON_OFF_Pin, GPIO_PIN_SET);
    osDelay(4500);
    HAL_GPIO_WritePin(ON_OFF_GPIO_Port, ON_OFF_Pin, GPIO_PIN_RESET);
    HAL_GPIO_WritePin(LDO_OFF_GPIO_Port, LDO_OFF_Pin, GPIO_PIN_SET);
    osDelay(3000);
    if(*pwr_level < PWRONLVL)
    {
      return true;
    }
    else
    {
      return false;
    }
  }
  else
  {
    return true;
  }
}

uint32_t uart_send_buff(uint8_t *data_out, uint32_t size)
{
	return HAL_UART_Transmit_DMA(&huart1, data_out, (uint16_t)size);
}

uint32_t uart_read_byte(uint8_t *pData)
{
	return HAL_UART_Receive_DMA(&huart1, pData, 1);
}

static _Bool TelitPortalAuthenticate(void)
{
  char *result = NULL;
  int i = 0;
  int data_length = 0;
  
  memset(post_buff, 0, sizeof(post_buff));
  memset(local_buff, 0, sizeof(local_buff));
  memset(telit_sessionId, 0, sizeof(telit_sessionId));
  
  /*Reset rx buffer for data reception*/
  SCP_InitRx();
  
  /* Form data for lenght calculation*/
  sprintf(local_buff, fcmd_dW_auth, telit_appToken, telit_appID, modem_data.imei);
  
  /* Get data length */
  sprintf(post_length, "%d\r\n\r\n", strlen(local_buff));
  
  /*Generate full HTTP post*/
  sprintf(post_buff, (char *)fcmd_HTTPPOST, strlen(fcmd_HTTPPOST));
  strcat(post_buff,post_length);
  strcat(post_buff,local_buff);
  
  /* Send HTTP POST data */
  result = SocketSend(modem_data.socket_id, post_buff, strlen(post_buff));
  
  /*Receive data and extract the Session ID*/
  if(result)
  {
    result = NULL;
    result = SocketReceive(modem_data.socket_id, &data_length);
    if(result)
    {
      result = strstr(result, "sessionId\":\"");
      if(result)
      {
        result += strlen("sessionId\":\"");
        
        i=0;
        while ((*result != '\"')&& (i < SESSIONID_LENGTH))
        {
          telit_sessionId[i++]=*(result++);
          
        }
        if (i <= SESSIONID_LENGTH)
        {
          ModemCloseTcpSocket(modem_data.socket_id);
          return true;
        }
      }
    }
  }
  return false;
}

static _Bool TelitPortalPostData(void)
{
  char *result = NULL;
  uint32_t len;
  int data_length = 0;
  
  memset(post_buff, 0, sizeof(post_buff));
  memset(local_buff, 0, sizeof(local_buff));
  
  /*Reset rx buffer for data reception*/
  SCP_InitRx();
  
    /* Calculate post length */
    len =  strlen(fcmd_dw_post_auth) - 2;
    len += strlen(fcmd_dw_post_p1) - 4;
    len += strlen(fcmd_dw_post_p2) - 4;
    len += strlen(fcmd_dw_post_p3) - 4;
    len += strlen(fcmd_dw_post_p4) - 4;
    len += strlen(fcmd_dw_post_p5) - 4;
    
    /* Calculate parameters length */
    sprintf(
            (char *)post_buff,"%s%s%s%s%s%s%d%d%d%d%d",
            telit_sessionId,
            modem_data.imei,
            modem_data.imei,
            modem_data.imei,
            modem_data.imei,
            modem_data.imei,
			(int)storage.energy_stored_mah,
			(int)storage.energy_released_mah,
			(int)modem_data.day_lenght_store,
			(int)storage.total_batt_ouput_ah,
			(int)storage.vbatt_mv
              );

    len += strlen((char *)post_buff);
    
    /*Generate full HTTP post*/
    memset(post_buff, 0, sizeof(post_buff));
    sprintf(post_buff, (char *)fcmd_HTTPPOST, strlen(fcmd_HTTPPOST));
    sprintf((char *)local_buff,"%d\r\n\r\n", (int)len);
    strcat(post_buff,local_buff);
    
    memset(local_buff, 0, sizeof(local_buff));
    sprintf((char *)local_buff, fcmd_dw_post_auth, telit_sessionId);
    strcat(post_buff,local_buff);
    
    memset(local_buff, 0, sizeof(local_buff));
    sprintf((char *)local_buff, fcmd_dw_post_p1, modem_data.imei, (int)storage.energy_stored_mah);
    strcat(post_buff,local_buff);
    
    memset(local_buff, 0, sizeof(local_buff));
    sprintf((char *)local_buff, fcmd_dw_post_p2, modem_data.imei, (int)storage.energy_released_mah);
    strcat(post_buff,local_buff);
    
    memset(local_buff, 0, sizeof(local_buff));
    sprintf((char *)local_buff, fcmd_dw_post_p3, modem_data.imei, (int)modem_data.day_lenght_store);
    strcat(post_buff,local_buff);
    
    memset(local_buff, 0, sizeof(local_buff));
    sprintf((char *)local_buff, fcmd_dw_post_p4, modem_data.imei, (int)storage.total_batt_ouput_ah);
    strcat(post_buff,local_buff);
    
    memset(local_buff, 0, sizeof(local_buff));
    sprintf((char *)local_buff, fcmd_dw_post_p5, modem_data.imei, (int)storage.vbatt_mv);
    strcat(post_buff,local_buff);
    
    /* Send HTTP POST data in two peaces*/
    len = strlen(post_buff)/2;
    result = SocketSend(modem_data.socket_id, post_buff, len);
    if(result)
    {
      result = SocketSend(modem_data.socket_id, &post_buff[len], strlen(post_buff) - len);
    }
    
    /*Receive data*/
    if(result)
    {
      result = NULL;
      result = SocketReceive(modem_data.socket_id, &data_length);
      if(result)
      {
        result = strstr(result, "}}");
        if(result)
        {
          ModemCloseTcpSocket(modem_data.socket_id);
          return true;
        }
      }

upload_error_t TelitCloudUpload(void)
{
  static _Bool authenticated = false;
  _Bool result = false;  
  char * scp_result = NULL;
  upload_error_t return_error = UPLOAD_OK;
  
  /*Apply power for IoT LTE module*/
  if(!ModemOn(&storage.adc_data[4]))
  {
    return_error = MODEM_POWER_ON_FAIL;
    goto error_exit;
  }
  
  /*Start Timer and USART Receive with DMA*/
  HAL_TIM_Base_Start_IT(&htim7);

  /*Start UART DMA Receive process everytime to avoid errors on modem start up*/
  HAL_UART_Receive_DMA(&huart1, &aRxBuffer, 1);
  
  /*Start AT Commands*/
  scp_result = SCP_SendCommandWaitAnswer("AT\r\n", "OK", 200, 1);
  
  /*No response to AT, Retry*/
  if(!scp_result)
  {
    osDelay(5000);
    HAL_UART_Receive_DMA(&huart1, &aRxBuffer, 1);
    scp_result = NULL;
    scp_result = SCP_SendCommandWaitAnswer("AT\r\n", "OK", 200, 1);
    if(!scp_result)
    {
      return_error = MODEM_CMD_NO_RESPONSE;
      goto error_exit;
    }
  }
  
  /*Modem is ON*/
  modem_data.lte_pwr_status = true;
  
  /*Check PIN*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CPIN?\r\n", "+CPIN: READY", 2000, 1);
  
  /*Echo commands turn off*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("ATE0\r\n", "OK", 2000, 1);
  
  /*Sets LED Output mode*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT#TCONTLED?\r\n", "#TCONTLED: 1", 1000, 1);
  if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT#TCONTLED=1\r\n", "OK", 2000, 1);
  
  /*Sets Error Report*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT+CMEE=2\r\n", "OK", 2000, 1);
  
  osDelay(1000);
  
  if(scp_result)
  {
    /*Get IMEI*/
    scp_result = NULL;
    scp_result = GetIMEI();
    if(scp_result)
    {
      memset(modem_data.imei, 0x00, 16);
      strcpy(modem_data.imei, scp_result);
    }
    
    /*Get module type*/
    scp_result = NULL;
    scp_result = GetID();
    if(scp_result)
    {
      memset(modem_data.device_name, 0x00, 21);
      strcpy(modem_data.device_name, scp_result);
    }
    
    /*Get firmware version*/
    scp_result = NULL;
    scp_result = GetVersion();
    if(scp_result)
    {
      memset(modem_data.fw_version, 0x00, 16);
      strcpy(modem_data.fw_version, scp_result);
    }
  }
  
  if(!scp_result)
  {
    return_error = MODEM_CMD_NO_RESPONSE;
    goto error_exit;
  }
  
  /*Set APN*/
  if (scp_result) scp_result = SCP_SendCommandWaitAnswer("AT*MCGDEFCONT?\r\n", "lpwa.telia.iot", 1000, 1);
  if (!scp_result) scp_result = SCP_SendCommandWaitAnswer("AT*MCGDEFCONT=,\"IP\",\"lpwa.telia.iot\"\r\n", "OK", 2000, 1);
  
  if (scp_result)
  {
    /*Check if we are connected to LTE network*/
    if(!WaitForNetwork())
    {
      return_error = MODEM_NO_OPERATOR_PRESENT;
      goto error_exit;
    }
  }
  else
  {
    return_error = MODEM_CMD_NO_RESPONSE;
    goto error_exit;
  }
  
  /*Store signal quality*/
  modem_data.signal = SignalQuality();
  
  /*Network status check*/
  modem_data.network_status =  NetworkRegistrationCheck();
  
  /*registered to home network or registered as roaming is acceptable*/
  if((modem_data.network_status == 1) || (modem_data.network_status == 5))
  {
    /*Store operator*/
    scp_result = NULL;
    scp_result = GetOperator();
    if(scp_result)
    {
      memset(modem_data.operator, 0x00, 17);
      strcpy(modem_data.operator, scp_result);
    }
    else
    {
      return_error = MODEM_NO_OPERATOR_PRESENT;
      goto error_exit;
    }
    
    /*Check LTE status*/
    modem_data.lte_status = LTE_StatusCheck();
    
    /*Try to connect if not connected*/
    if(!modem_data.lte_status)
    {
      modem_data.lte_status = LTE_Connect(modem_data.ip_address);
      if(!modem_data.lte_status)
      {
        LTE_Disconnect();
        return_error = MODEM_NO_DATA_SERVICE;
        goto error_exit;
      }
    } 
  }
  else
  {
    modem_data.lte_status = 0;
    authenticated = false;
    return_error = CLOUD_AUTH_ERROR;
    goto error_exit;
  }
  
  /*Start uploading*/
  
  /*Authenticate only once per session*/
  if(!authenticated)
  {
    /*Authenticate */
  Authentication:
    result = ModemOpenTcpSocket("54.93.92.219", 80, &modem_data.socket_id);
    if(result)
    {
      authenticated = TelitPortalAuthenticate();
    }
    /*Post*/
    if(authenticated)
    {
      result = ModemOpenTcpSocket("54.93.92.219", 80, &modem_data.socket_id);
      if (result)
      {
        authenticated = TelitPortalPostData();
      }
    }
    if(!result)
    {
      LTE_Disconnect();
      goto error_exit;
    }
  }
  else
  {
    /*Post*/
    result = ModemOpenTcpSocket("54.93.92.219", 80, &modem_data.socket_id);
    if (result)
    {
      authenticated = TelitPortalPostData();
    }
    /*If post fails try to authenticate*/
    else
    {
      authenticated = false;
      goto Authentication;
    }
  }
  
  /*Turn off LED1*/

  /*Turn off Modem*/

  /*Stop Timer*/
  HAL_TIM_Base_Stop_IT(&htim7);

  if(!ModemOff(&storage.adc_data[4]))
  {
    return_error = MODEM_POWER_OFF_FAIL;
    modem_data.lte_pwr_status = false;
    return return_error;
  }
  modem_data.lte_pwr_status = false;
  return return_error;
  
error_exit:
  /*Turn off LED1*/

  /*Turn off Modem*/
/*Stop Timer*/
HAL_TIM_Base_Stop_IT(&htim7);
  if(!ModemOff(&storage.adc_data[4]))
  {
    return_error = MODEM_POWER_OFF_FAIL;
    modem_data.lte_pwr_status = false;
    return return_error;
  }
  modem_data.lte_pwr_status = false;
  return return_error;
}
